<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints=""
    android:background="#580A0A">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#E7FFFFFF"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Body2"></androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#590A0A"
            tools:context=".MainActivity">

            <LinearLayout
                android:id="@+id/main"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="DuplicateIds,MissingConstraints,VisualLintBounds"
                tools:layout_editor_absoluteX="-6dp"></LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:typeface="monospace"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="541dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColorLink="@color/white"
                android:typeface="monospace"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="274dp"
                tools:layout_editor_absoluteY="541dp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_scrollFlags="scroll|enterAlways"
                app:tabMode="scrollable"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="16dp">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_names" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_title" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratings_1_5" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_comments" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="541dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_input_add"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="450dp" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="characters"
        android:inputType="inputSongDetails"
        android:text="@string/song_details"
        android:textColor="#2B2D30"
        android:textColorLink="#BD0D00"
        android:textSize="24sp"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="center"
        tools:ignore="Autofill,Deprecated,LabelFor,TextViewEdits" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>